<resources>
    <string name="app_name">Information</string>
    <string name="details">My Information</string>
    <string name="add">add</string>
    <string name="comlist">Information List</string>
    <string name="choice">请选择学院</string>
    <string name="curDate">2020.06.11</string>
    <string name="curWeek">Thursday</string>
    <string name="curDay">11</string>
    <string name="Words">世界比我强大，我只能单枪匹马与之对抗，无论如何这都是一个壮举</string>
    <string name="start">Login</string>
    <string name="deleteInfo">长按移除信息</string>
    <string name="refresh">log out</string>
    <string name="finance">金融学院</string>
    <string name="math">经济数学学院</string>
    <string name="it">经济信息工程学院</string>
    <string name="inputKW">请输入关键词</string>
    <string name="search">搜索</string>
    <string name="account">会计学院</string>
    <string name="foreign">经贸外语学院</string>
</resources>