<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/bg3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="242dp"
            android:text="@string/curDate"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/curWeek"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="98dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/curDay"
            android:textSize="78sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="266dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:text="@string/Words"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#000000"
            android:layout_gravity="center"
            android:text="@string/start"
            android:onClick="openLogin"
            android:textColor="#ffffff" />

    </LinearLayout>


</RelativeLayout>